--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "frontdesk-app",
     "version": "1.0.0",
+    "type": "module",
     "private": true,
     "scripts": {
         "dev": "vite",
@@ -8,8 +9,7 @@
         "serve": "vite preview",
         "backend": "cd strapi-backend && npm run develop",
         "frontend": "cd frontdesk-app && npm run dev"
-                },
-},
+    },
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
