--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@mui/material": "^5.14.15",
         "@mui/toolpad-core": "^0.1.51",
         "axios": "^1.6.7",
+        "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.29.0",
