--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^6.29.0",
         "vite": "^5.0.0"
     },
