--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@mui/icons-material": "^5.14.12",
         "@mui/material": "^5.14.15",
         "@mui/toolpad-core": "^0.1.51",
+        "@shadcn/ui": "^0.0.4",
         "axios": "^1.6.7",
         "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
