--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "frontdesk-app",
     "version": "1.0.0",
-    "type": "module",
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -13,22 +13,21 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@mui/icons-material": "^5.14.12",
-        "@mui/material": "^5.14.15",
         "@mui/toolpad-core": "^0.1.51",
         "@shadcn/ui": "^0.0.4",
         "axios": "^1.6.7",
-        "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^6.29.0",
         "react-toastify": "^11.0.5",
-        "vite": "^5.0.0"
+        "vite": "^6.2.3",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.17",
+        "caniuse-lite": "^1.0.30001743",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.4.1"
     }
