chore: remove secrets from repo and add backend/secrets/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ backend/__pycache__/
 backend/db.sqlite3
 backend/.env
 backend/secrets/
+# Service account JSONs and other secrets. Keep out of VCS.
 venv/
 
 # VS Code and OS-specific files
