--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
         "frontend": "cd frontdesk-app && npm run dev"
     },
     "dependencies": {
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@shadcn/ui": "^0.0.4",
         "axios": "^1.6.7",
+        "js-cookie": "^3.0.5",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^6.29.0",
         "react-toastify": "^11.0.5",
-        "vite": "^6.2.3",
         "xlsx": "^0.18.5"
     },
     "devDependencies": {
