--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "autoprefixer": "^10.4.17",
         "caniuse-lite": "^1.0.30001743",
         "postcss": "^8.4.31",
-        "tailwindcss": "^3.4.1"
+        "tailwindcss": "^3.4.1",
+        "vite": "^6.4.1"
     }
 }
