--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 VITE_API_BASE_URL=http://localhost:8000
+
+
+# https://www.builder.io/c/docs/using-your-api-key
+VITE_PUBLIC_BUILDER_KEY=6997c60326f44274bd08e8adba079795
+
