--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_API_BASE_URL=http://localhost:8000
+VITE_API_BASE_URL=http://127.0.0.1:8081
+
 
 
 # https://www.builder.io/c/docs/using-your-api-key
